force-app/main/default/objects/Document_Checklist_Rule__mdt.object
<CustomObject>
    <description>Rules executed to automatically generate document checklists</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the rule can be calculated or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Rule__c</fullName>
        <description>Field used to manage how the checklist is auto-cancelled</description>
        <inlineHelpText>Select &quot;Requested&quot; if auto-cancellation only applies when both applicants and assessors did not worked on the checklist</inlineHelpText>
        <label>Cancellation Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                    <default>true</default>
                    <label>Always</label>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Draft Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <description>Defines the evaluation criteria for the function, leave blank if should always return as true</description>
        <inlineHelpText>Defines the evaluation criteria for the function, leave blank if should always return as true</inlineHelpText>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Request_Type__c</fullName>
        <description>Document Request Type for Callista integration</description>
        <label>Document Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Document Type for Callista integration</description>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helptext_Email__c</fullName>
        <description>Help text shown on the results sent out via email</description>
        <label>Helptext - Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Helptext_UI__c</fullName>
        <description>Help text shown on the results visible to UI</description>
        <label>Helptext - UI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>Value that is returned in the event the result returns true</description>
        <inlineHelpText>Value that is returned in the event the result returns true</inlineHelpText>
        <label>Outcome</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Object_Type__c</fullName>
        <label>Rule Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                    <default>true</default>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Work Experience</fullName>
                </value>
                <value>
                    <fullName>SBQQ Quote</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Application Course Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Used to sort the rules results in order</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the Task that should be spawned when the checklist is updated.</description>
        <inlineHelpText>Set the Task that should be spawned when the checklist is updated.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Course Prerequisite</fullName>
                </value>
                <value>
                    <fullName>GTE</fullName>
                </value>
                <value>
                    <fullName>Name Change</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Residency</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Work Experience</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Under 18</fullName>
                </value>
                <value>
                    <fullName>OSHC</fullName>
                </value>
                <value>
                    <fullName>Offer Conditions</fullName>
                </value>
                <value>
                    <fullName>Unit Prerequisite</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>Curriculum Vitae</fullName>
                </value>
                <value>
                    <fullName>Application Documents</fullName>
                </value>
                <value>
                    <fullName>Research Program</fullName>
                </value>
                <value>
                    <fullName>Previous Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Grouping where the document checklist rule is included</description>
        <label>Version</label>
        <referenceTo>Document_Checklist_Rule_Version__mdt</referenceTo>
        <relationshipLabel>Document Checklist Rules</relationshipLabel>
        <relationshipName>Document_Checklist_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Document Checklist Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sort_Order__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Active__c</columns>
        <columns>Rule_Object_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Version__c</columns>
        <columns>Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assessment_Version_1</fullName>
        <columns>Sort_Order__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Active__c</columns>
        <columns>Rule_Object_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Version__c</columns>
        <columns>Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>Assessment_Version_1</value>
        </filters>
        <label>Assessment Version 1</label>
    </listViews>
    <listViews>
        <fullName>Assessment_Version_2</fullName>
        <columns>Sort_Order__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Active__c</columns>
        <columns>Rule_Object_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Version__c</columns>
        <columns>Criteria__c</columns>
        <columns>Outcome__c</columns>
        <columns>Document_Request_Type__c</columns>
        <columns>Document_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>Assessment_Version_2</value>
        </filters>
        <label>Assessment Version 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Offer_Acceptance_Version_1</fullName>
        <columns>Sort_Order__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Active__c</columns>
        <columns>Rule_Object_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Version__c</columns>
        <columns>Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>Offer_Acceptance_Version_1</value>
        </filters>
        <label>Offer Acceptance Version 1</label>
    </listViews>
    <pluralLabel>Document Checklist Rules</pluralLabel>
</CustomObject>